--- a/src/app/scrum-timer/scrum-timer.component.html
+++ b/src/app/scrum-timer/scrum-timer.component.html
@@ -1,10 +1,15 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-3" style="margin: auto;">
+    <!-- <div class="col-lg-3 col-md-3 col-sm-3" style="margin: auto;">
       <app-guest [activeUser]="activeGuest"></app-guest>
-    </div>
-    <div class="col-lg-9 col-md-9 col-sm-9">
+    </div> -->
+    <div class="col-lg-12 col-md-12 col-sm-12">
       <app-timer [activeUser]="activeGuest" [activeTime]="currentTime" (nextUser)="enableNextUser()"></app-timer>
+    </div>
+    <div class="wrapper">
+      <div class="spinner pie"></div>
+      <div class="filler pie"></div>
+      <div class="mask"></div>
     </div>
   </div>
 </div>
