--- a/src/app/timer/timer.component.scss
+++ b/src/app/timer/timer.component.scss
@@ -7,8 +7,9 @@
   top: 0;
   left: 0;
   right: 0;
-  margin: auto;
+  margin: 13% 0% 0% 19% !important;
   height: 310px;
+  z-index: 500;
 
   h1 {
     margin-top: 10%;
