--- a/src/app/scrum-timer/scrum-timer.component.html
+++ b/src/app/scrum-timer/scrum-timer.component.html
@@ -4,12 +4,12 @@
       <app-guest [activeUser]="activeGuest"></app-guest>
     </div> -->
     <div class="col-lg-12 col-md-12 col-sm-12">
-      <app-timer [activeUser]="activeGuest" [activeTime]="currentTime" (nextUser)="enableNextUser()"></app-timer>
+      <app-timer [activeUser]="activeGuest" [activeTime]="currentScrum.remainingTime" (nextUser)="enableNextUser()"></app-timer>
     </div>
     <div class="wrapper">
-      <div class="spinner pie"></div>
-      <div class="filler pie"></div>
-      <div class="mask"></div>
+      <div class="spinner pie" [ngStyle]="{'animation-duration': remainingSeconds}"></div>
+      <div class="filler pie" [ngStyle]="{'animation-duration': remainingSeconds}"></div>
+      <div class="mask" [ngStyle]="{'animation-duration': remainingSeconds}"></div>
     </div>
   </div>
 </div>
