--- a/src/app/scrum-timer/scrum-timer.component.scss
+++ b/src/app/scrum-timer/scrum-timer.component.scss
@@ -64,3 +64,10 @@
     0% { opacity: 1; }
     50%, 100% { opacity: 0; }
   }
+
+.total-title {
+  font-family: 'Aclonica';
+  text-transform: capitalize;
+  font-size: 30px;
+  text-align: center;
+}
