--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,34 +1,5 @@
 <div class="countdown">
-  <h1 [@changeTitleSize]="{value: currentState}" (mouseover)="changeTitleSize()" (mouseleave)="changeTitleSize()">
-    {{activeUser.name}}
-  </h1>
-  <div class="bloc-time hours" data-init-value="24">
-    <span class="count-title">Hours</span>
-
-    <div class="figure hours hours-1">
-      <span class="top">{{hours.substring(0,1)}}</span>
-      <span class="top-back">
-        <span>2</span>
-      </span>
-      <span class="bottom">{{hours.substring(0,1)}}</span>
-      <span class="bottom-back">
-        <span>2</span>
-      </span>
-    </div>
-
-    <div class="figure hours hours-2">
-      <span class="top">{{hours.substring(1)}}</span>
-      <span class="top-back">
-        <span>8</span>
-      </span>
-      <span class="bottom">{{hours.substring(1)}}</span>
-      <span class="bottom-back">
-        <span>4</span>
-      </span>
-    </div>
-  </div>
-
-  <div class="bloc-time min" data-init-value="0">
+  <div class="bloc-time min" style="margin-left: 15%;" data-init-value="0">
     <span class="count-title">Minutes</span>
 
     <div class="figure min min-1">
