--- a/src/app/scrum-timer/scrum-timer.component.html
+++ b/src/app/scrum-timer/scrum-timer.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="activeGuest && minutesPerGuest" class="container">
   <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12">
       <app-guest-timer [activeUser]="activeGuest" [minutesPerTurn]="minutesPerGuest" (nextUser)="enableNextUser()">
@@ -13,7 +13,7 @@
   <div class="col-lg-12 col-md-12 col-sm-12">
     <h1 class="total-title">Total Scrum Meeting Time</h1>
     <div style="margin-left: 20%;">
-      <app-timer style="margin-left: 20%;" [isCountdown]="false" [totalTime]="currentScrum.totalTime"></app-timer>
+      <!-- <app-timer style="margin-left: 20%;" [isCountdown]="false" [totalTime]="currentScrum.totalTime"></app-timer> -->
     </div>
   </div>
 </div>
