--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,5 +1,5 @@
 <div class="countdown">
-  <div class="bloc-time min" style="margin-left: 15%;" data-init-value="0">
+  <div *ngIf="minutes && seconds" class="bloc-time min" style="margin-left: 15%;" data-init-value="0">
     <span class="count-title">Minutes</span>
 
     <div class="figure min min-1">
