Code - Added screen for initializing scrum meeting.

--- a/src/app/guest-timer/guest-timer.component.html
+++ b/src/app/guest-timer/guest-timer.component.html
@@ -1,6 +1,6 @@
 <div class="countdown">
   <h1 *ngIf="activeUser" [@changeTitleSize]="{value: currentState}" (mouseover)="changeTitleSize()" (mouseleave)="changeTitleSize()">
-    {{activeUser.name}}
+    {{activeUser.participantName}}
   </h1>
   <app-timer *ngIf="minutesPerTurn" [isCountdown]="true" [timeBurst]="minutesPerTurn"></app-timer>
 </div>
