--- a/src/app/scrum-timer/scrum-timer.component.html
+++ b/src/app/scrum-timer/scrum-timer.component.html
@@ -5,15 +5,19 @@
       </app-guest-timer>
     </div>
     <div class="wrapper">
-      <div class="spinner pie" [ngStyle]="{'animation-duration': (minutesPerGuest * 60) + 's'}"></div>
-      <div class="filler pie" [ngStyle]="{'animation-duration': (minutesPerGuest * 60) + 's'}"></div>
-      <div class="mask" [ngStyle]="{'animation-duration': (minutesPerGuest * 60) + 's'}"></div>
+      <div class="spinner pie" [ngClass]="{'run-animation': isRunning}" [ngStyle]="{'animation-duration': (minutesPerGuest * 60) + 's'}"></div>
+      <div class="filler pie" [ngClass]="{'run-animation': isRunning}" [ngStyle]="{'animation-duration': (minutesPerGuest * 60) + 's'}"></div>
+      <div class="mask" [ngClass]="{'run-animation': isRunning}" [ngStyle]="{'animation-duration': (minutesPerGuest * 60) + 's'}"></div>
     </div>
   </div>
-  <div class="col-lg-12 col-md-12 col-sm-12">
+  <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+    <button class="btn btn-warning" *ngIf="!wasStarted" (click)="pauseScrum()">Start Scrum!</button>
+    <button class="btn btn-warning" *ngIf="wasStarted" (click)="pauseScrum()">{{isRunning ? 'Pause' : 'Resume'}} Scrum!</button>
+  </div>
+  <!-- <div class="col-lg-12 col-md-12 col-sm-12">
     <h1 class="total-title">Total Scrum Meeting Time</h1>
     <div style="margin-left: 20%;">
-      <!-- <app-timer style="margin-left: 20%;" [isCountdown]="false" [totalTime]="currentScrum.totalTime"></app-timer> -->
+      <app-timer style="margin-left: 20%;" [isCountdown]="false" [totalTime]="currentScrum.totalTime"></app-timer>
     </div>
-  </div>
+  </div> -->
 </div>
