--- a/src/app/initialize-scrum/initialize-scrum.component.scss
+++ b/src/app/initialize-scrum/initialize-scrum.component.scss
@@ -88,6 +88,11 @@
     transform: scaleX(1);
   }
 
+  .invalid-feedback {
+    font-size: 16px;
+    font-weight: 500;
+  }
+
   .btn {
     margin-top: 10%;
   }
