--- a/src/app/guest-timer/guest-timer.component.scss
+++ b/src/app/guest-timer/guest-timer.component.scss
@@ -35,3 +35,14 @@ h1 {
   }
 }
 
+.timer {
+  margin-left: 17%;
+}
+
+.btn-warning {
+  background-color: #f07c22 !important;
+  width: 30%;
+  font-size: 22px;
+  font-family: aclonica;
+  margin-right: 10%;
+}
