--- a/src/app/scrum-timer/scrum-timer.component.html
+++ b/src/app/scrum-timer/scrum-timer.component.html
@@ -10,10 +10,10 @@
       <div class="mask" [ngClass]="{'run-animation': isRunning}" [ngStyle]="{'animation-duration': (minutesPerGuest * 60) + 's'}"></div>
     </div>
   </div>
-  <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+  <!-- <div class="col-lg-12 col-md-12 col-sm-12 text-center">
     <button class="btn btn-warning" *ngIf="!wasStarted" (click)="pauseScrum()">Start Scrum!</button>
     <button class="btn btn-warning" *ngIf="wasStarted" (click)="pauseScrum()">{{isRunning ? 'Pause' : 'Resume'}} Scrum!</button>
-  </div>
+  </div> -->
   <!-- <div class="col-lg-12 col-md-12 col-sm-12">
     <h1 class="total-title">Total Scrum Meeting Time</h1>
     <div style="margin-left: 20%;">
