--- a/src/app/initialize-scrum/initialize-scrum.component.html
+++ b/src/app/initialize-scrum/initialize-scrum.component.html
@@ -5,93 +5,133 @@
         ¡ Welcome to Scrummed !
       </h1>
     </div>
-
     <form class="col-lg-12 col-md-12 col-sm-12" [formGroup]="scrumMeetingForm" (ngSubmit)="createScrumMeeting()">
-
-      <!-- Meeting Title -->
-      <div class="form-group text-center">
-        <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12">
-            <label for="title" class="cool-input">
-              <input type="text" id="title" placeholder="&nbsp;" formControlName="meetingTitle"
-                [ngClass]="{ 'is-invalid': submitted && form.meetingTitle.errors }" />
-              <div *ngIf="submitted && form.meetingTitle.errors" class="invalid-feedback d-block">
-                <div *ngIf="form.meetingTitle.errors.required">
-                  You should name your metting!!!
-                </div>
-              </div>
-              <span class="label">Meeting title</span>
-            </label>
-          </div>
-          <div class="col-lg-3 col-md-3 col-sm-12 cool-span">
-            <div>Minutes per guest:</div>
-          </div>
-          <div class="col-lg-1 col-md-1 col-sm-12">
-            <label for="minutes" class="cool-input" target="minutesPerGuest">
-              <input type="number" min="0" id="minutes" placeholder="&nbsp;" formControlName="minutesPerGuest"
-                [ngClass]="{ 'is-invalid': submitted && form.minutesPerGuest.errors }" />
-              <div *ngIf="submitted && form.minutesPerGuest.errors" class="invalid-feedback d-block">
-                Set these minutes!!!
-              </div>
-            </label>
-          </div>
-        </div>
-      </div>
-
-      <!-- Meeting participants -->
-      <h3 class="initial-title">
-        Please, include as many participants as you want to your:
-        <span>{{form.meetingTitle.value ? form.meetingTitle.value : '???????????'}}</span>
-      </h3>
-      <div class="row">
-        <form class="col-lg-6 col-md-6 col-sm-12" [formGroup]="nextParticipant" (ngSubmit)="addParticipant()">
-          <div class="form-group">
-            <label for="name" class="cool-input" target="name">
-              <input type="text" id="name" placeholder="&nbsp;" formControlName="participantName"
-                [ngClass]="{ 'is-invalid': pSubmitted && pForm.participantName.errors }" />
-              <div *ngIf="pSubmitted && pForm.participantName.errors" class="invalid-feedback d-block">
-                <div *ngIf="pForm.participantName.errors.required">
-                  You should name your participant!!!
-                </div>
-              </div>
-              <span class="label">Participant name</span>
-            </label>
-          </div>
-          <div class="col-lg-12 col-md-12 col-sm-12">
-            <button class="btn btn-primary">Add Participant</button>
-          </div>
-        </form>
-        <div class="col-lg-6 col-md-6 col-sm-12 participants-title">
-          <h4>
-            Scrum Participants
-          </h4>
-          <div formArrayName="participants"
-            *ngFor="let p of scrumMeetingForm.get('participants')['controls']; let i = index;">
-            <div class="mt-3 mb-3">
-              <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12">
-                  <span>Name: </span><span target="value">{{p.value.participantName}}</span>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-12">
-                  <span>Turn: </span><span target="value">{{p.value.participantTurn}}</span>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12">
-                  <span>Goes first: </span><span target="value">{{p.value.isActiveParticipant ? 'Yes!' : 'Nope'}}</span>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-12">
-                  <span class="x" (click)="removeParticipant(i)"></span>
-                </div>
+      <aw-wizard>
+        <aw-wizard-step stepTitle="Name your meeting">
+          <!-- Set meeting title -->
+          <div class="form-group text-center">
+            <div class="row">
+              <div class="col-lg-12 col-md-12 col-sm-12">
+                <label for="title" class="cool-input">
+                  <input type="text" id="title" placeholder="&nbsp;" formControlName="meetingTitle"
+                    [ngClass]="{ 'is-invalid': submitted && form.meetingTitle.errors }" />
+                  <div *ngIf="submitted && form.meetingTitle.errors" class="invalid-feedback d-block">
+                    <div *ngIf="form.meetingTitle.errors.required">
+                      You should name your metting!!!
+                    </div>
+                  </div>
+                  <span class="label">Meeting title</span>
+                </label>
               </div>
             </div>
           </div>
-          <div *ngIf="submitted && form.participants.errors" class="invalid-feedback d-block">
-            You should have at least two participants!!!
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+              <button type="button" class="btn btn-success" awNextStep>Set minutes!!!</button>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-        <button class="btn btn-warning">Create Scrum!</button>
-      </div>
+        </aw-wizard-step>
+
+        <!-- Set minutes -->
+        <aw-wizard-step stepTitle="Set minutes per guest">
+          <div class="form-group text-center">
+            <div class="row">
+              <div class="col-lg-6 col-md-6 col-sm-6 cool-span">
+                <div>Minutes per guest:</div>
+              </div>
+              <div class="col-lg-1 col-md-1 col-sm-12">
+                <label for="minutes" class="cool-input" target="minutesPerGuest">
+                  <input type="number" min="0" id="minutes" placeholder="&nbsp;" formControlName="minutesPerGuest"
+                    [ngClass]="{ 'is-invalid': submitted && form.minutesPerGuest.errors }" />
+                  <div *ngIf="submitted && form.minutesPerGuest.errors" class="invalid-feedback d-block">
+                    Set these minutes!!!
+                  </div>
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 text-center">
+              <button type="button" class="btn btn-danger" awPreviousStep>Back to title</button>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 text-center">
+              <button type="button" class="btn btn-success" awNextStep>Participants!!!</button>
+            </div>
+          </div>
+        </aw-wizard-step>
+
+        <!-- Set meeting participants -->
+        <aw-wizard-step stepTitle="Add participants">
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 cool-span">
+              <h3 class="initial-title text-center mt-0">
+                Please, include as many participants as you want to your:
+                <span>{{form.meetingTitle.value ? form.meetingTitle.value : '???????????'}}</span>
+              </h3>
+            </div>
+          </div>
+          <form [formGroup]="nextParticipant" (ngSubmit)="addParticipant()">
+            <div class="row">
+              <div class="col-lg-6 col-md-6 col-sm-12 text-right">
+                <div class="form-group">
+                  <label for="name" class="cool-input" target="name">
+                    <input type="text" id="name" placeholder="&nbsp;" formControlName="participantName"
+                      [ngClass]="{ 'is-invalid': pSubmitted && pForm.participantName.errors }" />
+                    <div *ngIf="pSubmitted && pForm.participantName.errors" class="invalid-feedback d-block">
+                      <div *ngIf="pForm.participantName.errors.required">
+                        You should name your participant!!!
+                      </div>
+                    </div>
+                    <span class="label">Participant name</span>
+                  </label>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-12">
+                <button class="btn btn-primary">Add Participant</button>
+              </div>
+            </div>
+          </form>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 text-center participants-title">
+              <h4>
+                Scrum Participants
+              </h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 mx-auto">
+              <div formArrayName="participants"
+                *ngFor="let p of scrumMeetingForm.get('participants')['controls']; let i = index;">
+                <div class="mt-3 mb-3">
+                  <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                      <span>Name: </span><span target="value">{{p.value.participantName}}</span>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-12">
+                      <span>Turn: </span><span target="value">{{p.value.participantTurn}}</span>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12">
+                      <span>Goes first: </span><span
+                        target="value">{{p.value.isActiveParticipant ? 'Yes!' : 'Nope'}}</span>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-12">
+                      <span class="x" (click)="removeParticipant(i)"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div *ngIf="submitted && form.participants.errors" class="invalid-feedback d-block text-center">
+                You should have at least two participants!!!
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 text-center mt-5">
+              <button class="btn btn-warning">Create Scrum!</button>
+            </div>
+          </div>
+        </aw-wizard-step>
+      </aw-wizard>
     </form>
   </div>
 </div>
