--- a/src/app/initialize-scrum/initialize-scrum.component.scss
+++ b/src/app/initialize-scrum/initialize-scrum.component.scss
@@ -91,12 +91,12 @@
     font-family: aclonica;
   }
   .btn-add-guest {
-    background: #3498db;
-    background-image: -webkit-linear-gradient(top, #3498db, #e00bc7);
-    background-image: -moz-linear-gradient(top, #3498db, #e00bc7);
-    background-image: -ms-linear-gradient(top, #3498db, #e00bc7);
-    background-image: -o-linear-gradient(top, #3498db, #e00bc7);
-    background-image: linear-gradient(to bottom, #3498db, #e00bc7);
+    background: #28a745;
+    background-image: -webkit-linear-gradient(top, #28a745);
+    background-image: -moz-linear-gradient(top, #28a745);
+    background-image: -ms-linear-gradient(top, #28a745);
+    background-image: -o-linear-gradient(top, #28a745);
+    background-image: linear-gradient(to bottom, #28a745);
     -webkit-border-radius: 28;
     -moz-border-radius: 28;
     border-radius: 28px;
@@ -107,15 +107,18 @@
     text-decoration: none;
   }
   .btn-add-guest:hover {
-    background: #1cff3e;
-    background-image: -webkit-linear-gradient(top, #1cff3e, #f71125);
-    background-image: -moz-linear-gradient(top, #1cff3e, #f71125);
-    background-image: -ms-linear-gradient(top, #1cff3e, #f71125);
-    background-image: -o-linear-gradient(top, #1cff3e, #f71125);
-    background-image: linear-gradient(to bottom, #1cff3e, #f71125);
+    background: #218838;
+    background-image: -webkit-linear-gradient(top, #218838);
+    background-image: -moz-linear-gradient(top, #218838);
+    background-image: -ms-linear-gradient(top, #218838);
+    background-image: -o-linear-gradient(top, #218838);
+    background-image: linear-gradient(to bottom, #218838);
     text-decoration: none;
   }
-  
+  .btn-add-guest:focus {
+    outline: 0;
+  }
+
   .guest-list {
     margin-top: 2%;
     font-family: 'Aclonica';
@@ -167,13 +170,13 @@
 
   .styled-checkbox {
     visibility: hidden; // Hide the original checkbox
-  
+
     & + label {
       position: relative;
       cursor: pointer;
       padding: 0;
     }
-  
+
     // Box.
     & + label:before {
       content: '';
@@ -186,29 +189,29 @@
       border: solid;
       border-color: #f35429;
     }
-  
+
     // Box focus
     &:focus + label:before {
       box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.12);
     }
-  
+
     // Box checked
     &:checked + label:before {
       background: #f35429;
     }
-    
+
     // Disabled state label.
     &:disabled + label {
       color: #b8b8b8;
       cursor: auto;
     }
-  
+
     // Disabled box.
     &:disabled + label:before {
       box-shadow: none;
       background: #ddd;
     }
-  
+
     // Checkmark. Could be replaced with an image
     &:checked + label:after {
       content: '';
@@ -218,7 +221,7 @@
       background: white;
       width: 2px;
       height: 2px;
-      box-shadow: 
+      box-shadow:
         2px 0 0 white,
         4px 0 0 white,
         4px -2px 0 white,
