--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
 @import url(https://fonts.googleapis.com/css?family=Aclonica);
+
+.btn {
+  color: white;
+}
 
 .general-title {
   height: 10em;
